<resources>
    <string name="app_name">QLBanHang</string>
    <string name="overview">Tổng quan</string>
    <string name="order">Đơn hàng</string>
    <string name="product">Sản phẩm</string>
    <string name="more">Thêm</string>
    <string name="list_order">Danh sách đơn hàng</string>
    <string name="list_product">Danh sách sản phẩm</string>
    <string name="product_price">%.2f VND</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Bạn có chắc chắn muốn xóa sản phẩm này?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="new_product">Sản phẩm mới</string>
    <string name="add">Thêm</string>
    <string name="product_inserted">Đã thêm sản phẩm mới</string>
    <string name="invalid_data">Dữ liệu không hợp lệ</string>
    <string name="new_type">Thêm mới</string>
    <string name="product_info">Thông tin sản phẩm</string>
    <string name="type_product">Loại sản phẩm</string>
    <string name="price_range">Khoảng giá</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="apply">Áp dụng</string>
    <string name="cancel">Hủy</string>
    <string name="filter">Bộ lọc</string>
    <string name="all">Tất cả</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="deteled">Đã xóa</string>
    <string name="new_order">Đơn hàng mới</string>
    <string name="mark_this_is_paid">Đánh dấu đơn hàng này đã thanh toán?</string>
    <string name="mark_this_is_unpaid">Đánh dấu đơn hàng này chưa được thanh toán?</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="mark_paid">Đã thanh toán</string>
    <string name="mark_unpaid">Chưa thanh toán</string>
    <string name="confirm">Xác nhận</string>
    <string name="are_you_sure_you_want_to_delete_this_order">Bạn có chắc chắn muốn xóa đơn hàng này?</string>
    <string name="add_phone_number">Thêm số điện thoại</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="store_name">Tên cửa hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="config_store">Cấu hình cửa hàng</string>
    <string name="save_store_info">Lưu thông tin cửa hàng</string>
    <string name="sign_up">Đăng ký</string>
    <string name="login_failed">Đăng nhập thất bại. Vui lòng kiểm tra lại thông tin</string>
    <string name="sign_in_not_available">Chưa có chức năng đăng ký</string>

    <string-array name="sort_type">
        <item>Tên A->Z</item>
        <item>Tên Z->A</item>
        <item>Giá tăng dần</item>
        <item>Giá giảm dần</item>
    </string-array>
</resources>
